codegen/tests/errors/wrong_argument.stderr
error: unexpected attribute argument
 --> tests/errors/wrong_argument.rs:3:12
  |
3 | #[delegate(derive(AsStr))]
  |            ^^^^^^

error: unexpected attribute argument
  --> tests/errors/wrong_argument.rs:13:12
   |
13 | #[delegate(for(AsString))]
   |            ^^^

error: unexpected attribute argument
  --> tests/errors/wrong_argument.rs:17:30
   |
17 | struct MiddleName(#[delegate(derive(AsString))] String);
   |                              ^^^^^^

error: unexpected attribute argument
  --> tests/errors/wrong_argument.rs:20:28
   |
20 | struct NickName(#[delegate(for(AsString))] String);
   |                            ^^^

error: unexpected attribute argument
  --> tests/errors/wrong_argument.rs:24:16
   |
24 |     #[delegate(derive(AsString))]
   |                ^^^^^^

error: unexpected attribute argument
  --> tests/errors/wrong_argument.rs:30:16
   |
30 |     #[delegate(for(AsString))]
   |                ^^^

error: expected non-macro attribute, found attribute macro `delegate`
  --> tests/errors/wrong_argument.rs:36:13
   |
36 |     First(#[delegate(derive(AsString))] String),
   |             ^^^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `delegate`
  --> tests/errors/wrong_argument.rs:41:20
   |
41 |     FirstAndLast(#[delegate(for(AsString))] String),
   |                    ^^^^^^^^ not a non-macro attribute

error: expected non-macro attribute, found attribute macro `delegate`
  --> tests/errors/wrong_argument.rs:46:13
   |
46 |     Alias(#[delegate(as = "SomeType")] String),
   |             ^^^^^^^^ not a non-macro attribute

error: unexpected attribute argument
  --> tests/errors/wrong_argument.rs:49:12
   |
49 | #[delegate(as = "SomeType")]
   |            ^^

error: unexpected attribute argument
  --> tests/errors/wrong_argument.rs:54:12
   |
54 | #[delegate(as = "SomeType")]
   |            ^^

error[E0277]: the trait bound `String: AsString` is not satisfied
  --> tests/errors/wrong_argument.rs:34:1
   |
34 | #[delegate(derive(AsString))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsString` is not implemented for `String`
   |
   = help: the following other types implement trait `AsString`:
             FullName
             Name
             delegation::__macros::Wrapper<__Delegate>
note: required for `Either<String, Void>` to implement `__delegate_AsString__DelegateOwned`
  --> tests/errors/wrong_argument.rs:8:1
   |
8  | #[delegate]
   | ^^^^^^^^^^^
9  | trait AsString {
   |       ^^^^^^^^ unsatisfied trait bound introduced here
note: required for `delegation::__macros::Wrapper<Name>` to implement `AsString`
  --> tests/errors/wrong_argument.rs:8:1
   |
8  | #[delegate]
   | ^^^^^^^^^^^
9  | trait AsString {
   |       ^^^^^^^^ unsatisfied trait bound introduced here
   = note: this error originates in the attribute macro `delegate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `String: AsString` is not satisfied
  --> tests/errors/wrong_argument.rs:39:1
   |
39 | #[delegate(derive(AsString))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `AsString` is not implemented for `String`
   |
   = help: the following other types implement trait `AsString`:
             FullName
             Name
             delegation::__macros::Wrapper<__Delegate>
note: required for `Either<String, Void>` to implement `__delegate_AsString__DelegateOwned`
  --> tests/errors/wrong_argument.rs:8:1
   |
8  | #[delegate]
   | ^^^^^^^^^^^
9  | trait AsString {
   |       ^^^^^^^^ unsatisfied trait bound introduced here
note: required for `delegation::__macros::Wrapper<FullName>` to implement `AsString`
  --> tests/errors/wrong_argument.rs:8:1
   |
8  | #[delegate]
   | ^^^^^^^^^^^
9  | trait AsString {
   |       ^^^^^^^^ unsatisfied trait bound introduced here
   = note: this error originates in the attribute macro `delegate` (in Nightly builds, run with -Z macro-backtrace for more info)
